changes and grid layout

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
@@ -17,38 +16,40 @@
   <body>
     <!-- main container -->
     <div id="main-container">
-      
       <!-- first-left -->
       <article class="testimonial">
-        <div class="header-image">
-          <img
-            src="./testimonials-grid-section-main/images/image-daniel.jpg"
-            alt="A picture with a man named Daniel."
-          />
-        </div>
-        <div>
+        <div id="image-1">
+          <div class="header-image">
+            <img
+              src="./testimonials-grid-section-main/images/image-daniel.jpg"
+              alt="A picture with a man named Daniel."
+            />
+            <img
+              src="./testimonials-grid-section-main/images/bg-pattern-quotation.svg"
+            />
+          </div>
           <div class="person-name">Daniel Clifford</div>
           <div class="education-title">Verified Graduate</div>
+          <div class="healine-description">
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny’s worth.
+          </div>
+          <p class="details">
+            “I was an EMT for many years before I joined the bootcamp. I’ve been
+            looking to make a transition and have heard some people who had an
+            amazing experience here. I signed up for the free intro course and
+            found it incredibly fun! I enrolled shortly thereafter. The next 12
+            weeks was the best - and most grueling - time of my life. Since
+            completing the course, I’ve successfully switched careers, working
+            as a Software Engineer at a VR startup. ”
+          </p>
         </div>
-        <div class="healine-description">
-          I received a job offer mid-course, and the subjects I learned were
-          current, if not more so, in the company I joined. I honestly feel I
-          got every penny’s worth.
-        </div>
-        <p class="details">
-          “I was an EMT for many years before I joined the bootcamp. I’ve been
-          looking to make a transition and have heard some people who had an
-          amazing experience here. I signed up for the free intro course and
-          found it incredibly fun! I enrolled shortly thereafter. The next 12
-          weeks was the best - and most grueling - time of my life. Since
-          completing the course, I’ve successfully switched careers, working as
-          a Software Engineer at a VR startup. ”
-        </p>
       </article>
 
       <!-- second-top-middle -->
-      <article>
-        <div class="testimonial">
+      <article class="testimonial">
+        <div id="image-2">
           <div class="header-image">
             <img
               src="./testimonials-grid-section-main/images/image-jonathan.jpg"
@@ -69,8 +70,7 @@
       </article>
 
       <!-- third-bottom-left -->
-  <article>
-      <div class="testimonial">
+      <article class="testimonial">
         <div class="header-image">
           <img
             src="./testimonials-grid-section-main/images/image-kira.jpg"
@@ -95,45 +95,53 @@
           experience. It certainly helped me land a job as a full-stack
           developer after receiving multiple offers. 100% recommend! ”
         </p>
-        </div>
-        </article>
+      </article>
 
-        <!-- fourth-left -->
-        <article>
-          <div class="testimonial">
-            <div class="header-image">
-              <img src="./testimonials-grid-section-main/images/image-jeanette.jpg" alt="A woman named Janette."/>
-            </div>
-            <div class="person-name">Jeanette Harmon Verified</div>
-            <div class="education-title">Verified Graduate</div>
-            <div class="headline-description">An overall wonderful and rewarding experience</div>
+      <!-- fourth-left -->
+      <article class="testimonial">
+        <div class="header-image">
+          <img
+            src="./testimonials-grid-section-main/images/image-jeanette.jpg"
+            alt="A woman named Janette."
+          />
+        </div>
+        <div class="person-name">Jeanette Harmon Verified</div>
+        <div class="education-title">Verified Graduate</div>
+        <div class="headline-description">
+          An overall wonderful and rewarding experience
+        </div>
         <p class="details">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
         </p>
-        </article>
+      </article>
 
       <!-- fifth-bottom-middle -->
-      <article>
-        <div class="testimonial">
-          <img src="./testimonials-grid-section-main/images/image-patrick.jpg" alt="A named Patrick."/>
+      <article class="testimonial">
+        <div id="image-5">
+          <div>
+            <img
+              src="./testimonials-grid-section-main/images/image-patrick.jpg"
+              alt="A named Patrick."
+            />
+          </div>
+          <div class="person-name">Patrick Abrams</div>
+          <div class="education-title">Verified Graduate</div>
+          <div class="headline-description">
+            Awesome teaching support from TAs who did the bootcamp themselves.
+            Getting guidance from them and learning from their experiences was
+            easy.
+          </div>
+          <p class="details">
+            “ The staff seem genuinely concerned about my progress which I find
+            really refreshing. The program gave me the confidence necessary to
+            be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart
+            and amazing people. ”
+          </p>
         </div>
-        <div class="person-name">Patrick Abrams</div>
-        <div class="education-title">Verified Graduate</div>
-        <div class="headline-description">
-          Awesome teaching support from TAs who did the bootcamp themselves.
-          Getting guidance from them and learning from their experiences was
-          easy.
-        </div>
-        <p class="details">
-          “ The staff seem genuinely concerned about my progress which I find
-          really refreshing. The program gave me the confidence necessary to be
-          able to go out in the world and present myself as a capable junior
-          developer. The standard is above the rest. You will get the personal
-          attention you need from an incredible community of smart and amazing
-          people. ”
-        </p>
-        </article>
+      </article>
     </div>
   </body>
 </html>
